Remove deprecated boxing constructors and raw types
Replaces new Integer(...)/new Double(...) with Integer.valueOf/
Double.valueOf/LuaState.toDouble (matching the codebase's existing
idiom), parameterizes the raw Hashtable/Class usages in Savegame and
ZonePoint, and swaps Class.newInstance() for
Class.getDeclaredConstructor().newInstance() in Savegame.

Also converts Engine's remaining anonymous Runnable callbacks to
lambdas, and adds final to parameters/locals throughout the touched
files.