@@ -8,8 +8,9 @@ import org.apache.commons.collections4.IteratorUtils;
 
 import java.io.*;
 
-import java.util.Hashtable;
+import java.util.HashMap;
 import java.util.Iterator;
+import java.util.Map;
 
 import cgeo.geocaching.wherigo.kahlua.vm.LuaState;
 import cgeo.geocaching.wherigo.kahlua.vm.LuaTable;
@@ -26,99 +27,99 @@ public class ZonePoint implements LuaTable, Serializable {
     public static final double DEG_PI = 180 / Math.PI;
     public static final double PI_2 = Math.PI / 2;
 
-    public static ZonePoint copy (ZonePoint z) {
+    public static ZonePoint copy (final ZonePoint z) {
         if (z == null) return null;
         else return new ZonePoint (z);
     }
 
     public ZonePoint () { }
 
-    public ZonePoint (ZonePoint z) {
+    public ZonePoint (final ZonePoint z) {
         latitude = z.latitude;
         longitude = z.longitude;
         altitude = z.altitude;
     }
 
-    public ZonePoint (double lat, double lon, double alt) {
+    public ZonePoint (final double lat, final double lon, final double alt) {
         latitude = lat;
         longitude = lon;
         altitude = alt;
     }
 
-    public ZonePoint translate (double angle, double dist) {
-        double rad = azimuth2angle(angle);
-        double x = m2lat(dist * Math.sin(rad));
-        double y = m2lon(latitude, dist * Math.cos(rad));
+    public ZonePoint translate (final double angle, final double dist) {
+        final double rad = azimuth2angle(angle);
+        final double x = m2lat(dist * Math.sin(rad));
+        final double y = m2lon(latitude, dist * Math.cos(rad));
         return new ZonePoint(latitude + x, longitude + y, altitude);
     }
 
-    public void sync (ZonePoint z) {
+    public void sync (final ZonePoint z) {
         latitude = z.latitude;
         longitude = z.longitude;
     }
 
-    public static double lat2m (double degrees) {
+    public static double lat2m (final double degrees) {
         return degrees * LATITUDE_COEF;
     }
 
-    public static double lon2m (double latitude, double degrees) {
+    public static double lon2m (final double latitude, final double degrees) {
         return degrees * PI_180 * Math.cos(latitude * PI_180) * 6367449;
     }
 
-    public static double m2lat (double metres) {
+    public static double m2lat (final double metres) {
         return metres * METRE_COEF;
     }
 
-    public static double m2lon (double latitude, double metres) {
+    public static double m2lon (final double latitude, final double metres) {
         return metres / (PI_180 * Math.cos(latitude * PI_180) * 6367449);
     }
 
-    public double distance (double lat, double lon) {
+    public double distance (final double lat, final double lon) {
         return distance(lat, lon, latitude, longitude);
     }
 
-    public double distance (ZonePoint z) {
+    public double distance (final ZonePoint z) {
         return distance(z.latitude, z.longitude, latitude, longitude);
     }
 
-    public static final Hashtable conversions = new Hashtable(6);
+    public static final Map<String, Double> conversions = new HashMap<>(6);
     static {
-        conversions.put("feet", new Double(0.3048));
-        conversions.put("ft", new Double(0.3048));
-        conversions.put("miles", new Double(1609.344));
-        conversions.put("meters", new Double(1));
-        conversions.put("kilometers", new Double(1000));
-        conversions.put("nauticalmiles", new Double(1852));
+        conversions.put("feet", Double.valueOf(0.3048));
+        conversions.put("ft", Double.valueOf(0.3048));
+        conversions.put("miles", Double.valueOf(1609.344));
+        conversions.put("meters", Double.valueOf(1));
+        conversions.put("kilometers", Double.valueOf(1000));
+        conversions.put("nauticalmiles", Double.valueOf(1852));
     }
 
-    public static double convertDistanceTo (double value, String unit) {
+    public static double convertDistanceTo (final double value, final String unit) {
         if (unit != null && conversions.containsKey(unit)) {
-            return value / ((Double)conversions.get(unit)).doubleValue();
+            return value / conversions.get(unit).doubleValue();
         } else {
             return value;
         }
     }
 
-    public static double convertDistanceFrom (double value, String unit) {
+    public static double convertDistanceFrom (final double value, final String unit) {
         if (unit != null && conversions.containsKey(unit)) {
-            return value * ((Double)conversions.get(unit)).doubleValue();
+            return value * conversions.get(unit).doubleValue();
         } else {
             return value;
         }
     }
 
-    public static double distance (double lat1, double lon1, double lat2, double lon2) {
-        double mx = Math.abs(ZonePoint.lat2m(lat1 - lat2));
-        double my = Math.abs(ZonePoint.lon2m(lat2, lon1 - lon2));
+    public static double distance (final double lat1, final double lon1, final double lat2, final double lon2) {
+        final double mx = Math.abs(ZonePoint.lat2m(lat1 - lat2));
+        final double my = Math.abs(ZonePoint.lon2m(lat2, lon1 - lon2));
         return Math.sqrt(mx * mx + my * my);
     }
 
-    public String friendlyDistance (double lat, double lon) {
+    public String friendlyDistance (final double lat, final double lon) {
         return makeFriendlyDistance(distance(lat, lon));
     }
 
-    public static String makeFriendlyDistance (double dist) {
-        double d = 0; long part = 0;
+    public static String makeFriendlyDistance (final double dist) {
+        final double d; final long part;
         if (dist > 1500) { // abcd.ef km
             part = (long)(dist / 10);
             d = part / 100.0;
@@ -132,57 +133,58 @@ public class ZonePoint implements LuaTable, Serializable {
         }
     }
 
-    public static String makeFriendlyAngle (double angle) {
+    public static String makeFriendlyAngle (final double angle) {
         boolean neg = false;
-        if (angle < 0) {
+        double a = angle;
+        if (a < 0) {
             neg = true;
-            angle *= -1;
+            a *= -1;
         }
-        int degrees = (int)angle;
-        angle = (angle - degrees) * 60;
-        String an = String.valueOf(angle);
+        final int degrees = (int)a;
+        a = (a - degrees) * 60;
+        String an = String.valueOf(a);
         if (an.indexOf('.') != -1)
             an = an.substring(0, Math.min(an.length(), an.indexOf('.') + 5));
         return (neg ? "- " : "+ ") + String.valueOf(degrees) + "\u00b0 " + an;
     }
 
-    public static String makeFriendlyLatitude (double angle) {
+    public static String makeFriendlyLatitude (final double angle) {
         return makeFriendlyAngle(angle).replace('+', 'N').replace('-', 'S');
     }
 
-    public static String makeFriendlyLongitude (double angle) {
+    public static String makeFriendlyLongitude (final double angle) {
         return makeFriendlyAngle(angle).replace('+', 'E').replace('-', 'W');
     }
 
-    public double bearing (double lat, double lon) {
+    public double bearing (final double lat, final double lon) {
         // calculates bearing from specified point to here
         return MathLib.atan2(lat2m(latitude - lat), lon2m(lat, longitude - lon));
     }
 
-    public double bearing (ZonePoint zp) {
+    public double bearing (final ZonePoint zp) {
         return bearing(zp.latitude, zp.longitude);
     }
 
-    public static double angle2azimuth (double angle) {
+    public static double angle2azimuth (final double angle) {
         double degrees = -((angle - PI_2) * DEG_PI);
         while (degrees < 0) degrees += 360;
         while (degrees >= 360) degrees -= 360;
         return degrees;
     }
 
-    public static double azimuth2angle (double azim) {
+    public static double azimuth2angle (final double azim) {
         double ret = -(azim * PI_180) + PI_2;
         while (ret > Math.PI) ret -= Math.PI * 2;
         while (ret <= -Math.PI) ret += Math.PI * 2;
         return ret;
     }
 
-    public void setMetatable (LuaTable metatable) { }
+    public void setMetatable (final LuaTable metatable) { }
     public LuaTable getMetatable () { return null; }
 
-    public void rawset (Object key, Object value) {
+    public void rawset (final Object key, final Object value) {
         if (key == null) return;
-        String name = key.toString();
+        final String name = key.toString();
         if ("latitude".equals(name))
             latitude = LuaState.fromDouble(value);
         else if ("longitude".equals(name))
@@ -192,29 +194,29 @@ public class ZonePoint implements LuaTable, Serializable {
         }
     }
 
-    public Object rawget (Object key) {
+    public Object rawget (final Object key) {
         if (key == null) return null;
-        String name = key.toString();
+        final String name = key.toString();
         if ("latitude".equals(name)) return LuaState.toDouble(latitude);
         if ("longitude".equals(name)) return LuaState.toDouble(longitude);
         if ("altitude".equals(name)) return LuaState.toDouble(altitude);
         return null;
     }
 
-    public Object next (Object key) { return null; }
+    public Object next (final Object key) { return null; }
     public int len () { return 3; }
 
     public Iterator<Object> keys() { return IteratorUtils.arrayIterator(new Object[] { "latitude", "longitude", "altitude"}); }
 
-    public void updateWeakSettings (boolean weakKeys, boolean weakValues) { }
+    public void updateWeakSettings (final boolean weakKeys, final boolean weakValues) { }
 
-    public void serialize (DataOutputStream out) throws IOException {
+    public void serialize (final DataOutputStream out) throws IOException {
         out.writeDouble(latitude);
         out.writeDouble(longitude);
         out.writeDouble(altitude);
     }
 
-    public void deserialize (DataInputStream in) throws IOException {
+    public void deserialize (final DataInputStream in) throws IOException {
         latitude = in.readDouble();
         longitude = in.readDouble();
         altitude = in.readDouble();
